# KineScribe

./: .env  .gitignore  FallDetection_LLM_Inference.ipynb  FallDetection_ModelTraining.ipynb  FallDetection_PseudoLabelling.ipynb  Model_Quantization.ipynb  README.md  detection_test.py  final_live.py  live_rpicam.py  llm-yolo-bind.ipynb  main.py  pyproject.toml  requirements.txt  rpi_detection.py
backend/: app.py  requirements.txt
frontend/: index.html  script.js  style.css
